.metals/.reports/metals/r_scala-toplevel-mtags_1691395725825
id: file://<WORKSPACE>/src/main/scala/gcd/practice/subractor.scala:[64..71) in Input.VirtualFile("file://<WORKSPACE>/src/main/scala/gcd/practice/subractor.scala", "package practice
import chisel3._
import chisel3.util._

class  extends Module {
    val io = IO(new Bundle {
        val in1 = Input(UInt(2.W))
        val in2 = Input(UInt(2.W))
        val sum = Output(UInt(2.W))
        val carryout = Output(UInt(2.W))
    })
    io.sum := io.in1 ^ io.in2
    io.carryout := io.in1 & io.in2
}")
file://<WORKSPACE>/src/main/scala/gcd/practice/subractor.scala:5: error: expected identifier; obtained extends
class  extends Module {
       ^